tests/negative/typecheck/arg-annot-few.orng
fn main() -> Int {
    f(.a = 4, .b = 4)
}

fn f(x: Int) -> Int { x }